--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,15 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+
+# Mailtrap SMTP Server Configuration
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=api
+spring.mail.password=ca54ca8f1b8a7fe1cb2887c4bf83c21a
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+logging.level.org.springframework.mail=DEBUG
+logging.level.org.springframework.boot.autoconfigure.mail=DEBUG
