--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 logging.level.org.springframework.mail=DEBUG
 logging.level.org.springframework.boot.autoconfigure.mail=DEBUG
+
+# CORS Configuration
+spring.web.cors.allowed-origins=http://localhost:3000
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=Authorization,Content-Type
