--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/event_management
-spring.datasource.username=root
-spring.datasource.password=0087
+
+# DataSource Configuration
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
